# open-canvas

./: .env.example  .eslintrc.json  .gitignore  .gitmodules  .yarnrc.yml  MIGRATION_PLAN.md  README.md  langgraph.json  ls.vitest.config.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  test_input.json  turbo.json
agents-py/: langgraph.json  pyproject.toml
agents-py/agents/src/: utils.py
agents-py/agents/src/open_canvas/: index.py  prompts.py  state.py
agents-py/agents/src/open_canvas/nodes/: custom_action.py  generate_followup.py  generate_title.py  reflect.py  reply_to_general_input.py  rewrite_artifact_theme.py  rewrite_code_artifact_theme.py  summarizer.py  update_artifact.py  update_highlighted_text.py
agents-py/agents/src/open_canvas/nodes/generate_artifact/: index.py  schemas.py  utils.py
agents-py/agents/src/open_canvas/nodes/generate_path/: documents.py  dynamic_determine_path.py  include_url_contents.py  index.py
agents-py/agents/src/reflection/: index.py  prompts.py  state.py
agents-py/agents/src/summarizer/: index.py  state.py
agents-py/agents/src/thread_title/: index.py  prompts.py  state.py
agents-py/agents/src/web_search/: index.py  state.py
agents-py/agents/src/web_search/nodes/: classify_message.py  query_generator.py  search.py
agents-py/opencanvaspython.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents-py/shared/src/: constants.py  models.py  types.py
agents-py/shared/src/prompts/: __init__.py  quick_actions.py
agents-py/shared/src/utils/: __init__.py  artifacts.py  thinking.py  urls.py
(+430 files in other folders)
